--- a/debian/changelog
+++ b/debian/changelog
@@ -172,6 +172,10 @@ piuparts (0.51) unstable; urgency=low
     - Validate field names, and only use valid known problem conf files.
     - Minor HTML syntax fix.
     - Minor template integration.
+  * pupartslib/packagesdb.py
+    - Reworked rdep metrics (block_count, rrdep_count, waiting_count) to
+      calculate on-demand. Access methods are moved from Package to
+      PackagesDB.
 
   [ Holger Levsen ]
   * piuparts.py:
