--- a/debian/changelog
+++ b/debian/changelog
@@ -177,6 +177,7 @@ piuparts (0.51) unstable; urgency=low
       calculate on-demand. Access methods are moved from Package to
       PackagesDB.
     - Add a metric for the worst-case reverse-dependency chain length.
+    - Weight the reserved packages returned by this additional factor.
 
   [ Holger Levsen ]
   * piuparts.py:
