p.conf: set keyring for archived distros to debian-archive-removed-keys.gpg
Signed-off-by: Andreas Beckmann <anbe@debian.org>
Signed-off-by: Holger Levsen <holger@layer-acht.org>
(cherry picked from commit 8258fcd173d34d1aa85f3b55b710ea1930c96a2f)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 piuparts (0.77.1) UNRELEASED; urgency=medium
 
   * COMMITS THAT SHOULD BE BACKPORTED TO STRETCH
+  * piuparts.conf:
+    - Set keyring for archived distros to debian-archive-removed-keys.gpg.
 
  -- Andreas Beckmann <anbe@debian.org>  Wed, 14 Jun 2017 00:12:59 +0200
 
