--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+piuparts (0.77.1) UNRELEASED; urgency=medium
+
+  * COMMITS THAT SHOULD BE BACKPORTED TO STRETCH
+
+ -- Andreas Beckmann <anbe@debian.org>  Wed, 14 Jun 2017 00:12:59 +0200
+
 piuparts (0.77) unstable; urgency=medium
 
   [ Andreas Beckmann ]
