--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,7 @@ piuparts (0.99) UNRELEASED; urgency=medium
     - Add bullseye-proposed-updates.
   * piuparts.conf:
     - Add section [sid-merged-usr], using --merged-usr.  (Closes: #848968)
+    - Use --warn-on-debsums-errors for tests ending in buster.
   * piupartslib/packagesdb.py:
     - Keep recycled pass logs while waiting for new test results, continuing
       to show them as "successfully-tested" instead of "waiting-to-be-tested".
