--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,8 @@ piuparts (0.99) UNRELEASED; urgency=medium
   * piuparts.conf:
     - Add section [sid-merged-usr], using --merged-usr.  (Closes: #848968)
     - Use --warn-on-debsums-errors for tests ending in buster.
+    - Rename [stretch2proposed] to [stretch2next]
+      and [buster2proposed] to [buster2next].
   * piupartslib/packagesdb.py:
     - Keep recycled pass logs while waiting for new test results, continuing
       to show them as "successfully-tested" instead of "waiting-to-be-tested".
